--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -59,7 +59,11 @@
             <artifactId>jedis</artifactId>
             <version>3.6.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.6</version>
+        </dependency>
     </dependencies>
 
     <build>
